--- a/townService/package.json
+++ b/townService/package.json
@@ -63,8 +63,10 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.2",
     "nanoid": "^4.0.0",
     "socket.io": "^4.5.1",
     "swagger-ui-express": "^4.4.0",
