--- a/townService/package.json
+++ b/townService/package.json
@@ -69,6 +69,7 @@
     "mongoose": "^7.0.2",
     "nanoid": "^4.0.0",
     "socket.io": "^4.5.1",
+    "spotify-web-api-ts": "^1.4.5",
     "swagger-ui-express": "^4.4.0",
     "tsoa": "^4.1.0",
     "twilio": "^3.78.0"
